--- a/index.html
+++ b/index.html
@@ -1,21 +1,33 @@
 <!Doctype html>
 <html>
 <head></head>
-<body onload="draw()">
+<body onload="draw()" style="text-align:center;">
 
-  <canvas id="canvas" width="1200" height="600" style="border: 1px solid black"></canvas>
+  <canvas id="canvas" width="300" height="500" style="border: 1px solid black"></canvas>
   <br>
+  <div id='controls'>
   <button onclick='move()'>Move</button>
   <button onclick='rotate()'>Rotate</button>
   <button onclick='start()'>Start</button>
   <button onclick='stop()'>Stop</button>
   <button onclick='add()'>Add</button>
+  </div>
   <br>
-  <div id='info'>x:
+  <div id='info' style='display:none;'>x:
     <br>y:
     <br>r:
   </div>
   <script>
+
+  /* BASIC FLOCKING BEHAVIOUR use this tutorial
+   * https://gamedevelopment.tutsplus.com/tutorials/3-simple-rules-of-flocking-behaviors-alignment-cohesion-and-separation--gamedev-3444
+   *
+   *  To add:
+   *    - round bounding boxes (slightly cleverer maths required)
+   *    - change behaviour based on neighbour count
+   *    - add different kinds of birds
+   *    - more control/information
+   */
 
   var agents;
   var myInterval;
@@ -50,14 +62,22 @@
         } else {
           agents[i].rotate((Math.random()*30)-15);
         }
+        // check if any are within radius
+        var newArry = agents.filter(function (el) {
+          return el.testCircle(agents[i].x, agents[i].y);
+        })
+        //console.log(newArry.length);
+        // if(newArry.length>1) { console.log("HIT"); };
+        agents[i].neighbourCount = newArry.length;
         agents[i].draw();
       }
-
-
   }
+
 
   function Agent(x, y, rotation, speed, src) {
 
+    this.neighbourCount = 0;
+    this.collisionRadius = 100;
     this.rotation = rotation;
     this.speed = speed;
     this.x = x;
@@ -70,6 +90,21 @@
     };
 
     this.image.src = src;
+
+    this.testCircle = function(dx,dy) {
+        if( dx>this.x-(this.collisionRadius/2) &&
+            dx<this.x+(this.collisionRadius/2) &&
+            dy>this.y-(this.collisionRadius/2) &&
+            dy<this.y+(this.collisionRadius/2))
+        {
+            return true;
+        } else {
+          return false;
+        }
+    }
+
+
+
 
     this.forward = function() {
 
@@ -107,6 +142,19 @@
       var ctx = document.getElementById('canvas').getContext('2d');
       ctx.save();
       ctx.translate(this.x,this.y);
+
+      // Draw bounding
+      ctx.beginPath();
+      // ctx.arc(0,0,100,0,2*Math.PI);
+      ctx.rect(100/-2,100/-2,100,100);
+      if(this.neighbourCount>1) {
+        ctx.strokeStyle='red';
+      } else {
+        ctx.strokeStyle='black';
+      }
+      ctx.stroke();
+
+      // rotate and draw image
       ctx.rotate(this.rotation*Math.PI/180);
       ctx.drawImage(this.image,this.image.width/-2,this.image.height/-2);
       ctx.restore();
@@ -120,7 +168,7 @@
     // clear the canvas
     var w = document.getElementById('canvas').width;
     var h = document.getElementById('canvas').height;
-    console.log("W/h:" + w + "/" + h);
+    // console.log("W/h:" + w + "/" + h);
     document.getElementById('canvas').getContext('2d').clearRect(0,0,w,h);
   }
 
