--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 
   function draw() {
 
+    var ctx = document.getElementById('canvas').getContext('2d');
+    ctx.canvas.width = window.innerWidth-20;
+    ctx.canvas.height = window.innerHeight*0.9;
     agents = [new Agent(150,75,0,1,"bird.png")];
 
   }
