--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     agents.push(new Agent(Math.random()*ctx.canvas.width,     //x
                           Math.random()*ctx.canvas.height,    //y
                           Math.random()*360,                  //rotation
-                          1,                                  //speed - was using a randomised value but removing for alignment // (Math.random()*2)+1,
+                          (Math.random()*2)+1,                //speed - was using a randomised value but removing for alignment // (Math.random()*2)+1,
                           "bird.png"));                       //sprite
   }
 
@@ -101,6 +101,8 @@
     clearInterval(myInterval);
   }
 
+  var speed;
+
   function start() {
     myInterval = setInterval(function() { update(); }, 20);
   }
@@ -118,9 +120,9 @@
           agents[i].rotate((Math.random()*30)-15);
         }
         // return an array of agents which are within within radius
-        var newArry = agents.filter(function (el) { return el.testCircle(agents[i].x, agents[i].y); });
+        var newArry = agents.filter(function (el) { return el.testCircle(agents[i].x, agents[i].y) && el!=agents[i]; });
 
-        if(newArry.length>1) {
+        if(newArry.length>0) {
           var averageRotation = newArry.reduce(function (total, el) { console.log("el.rat"); return total+el.rotation; },0);
           averageRotation = averageRotation/newArry.length;
           console.log(averageRotation);
